<resources>
    <string name="app_name">TechTalk</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="password_mismatch">Password Mismatched</string>
    <string name="user_created_successfully">Account Created Successfully!</string>
    <string name="signUp_failed">SignUp Failed: %1$s</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="failed_to_update_profile">Failed to update profile: %1$s</string>
    <string name="permission_required">Access permission is required!</string>
    <string name="save">Save</string>
    <string name="logout">Log Out</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="profile_removed_successfully">Account Removed Successfully!</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="password_changed_successfully">Password Changed Successfully!</string>
    <string name="went_wrong">Something Went Wrong!</string>
    <string name="reset_password_instructions">Reset Password Instructions have been sent on %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="email_sent_failed">Failed To Send Email!</string>
    <string name="resend_timer">Resend in: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="no_internet">Check Your Internet Connection</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_chat_list">Chat list will appear here</string>
    <string name="empty_friends_list">Friends list will appear here</string>
    <string name="empty_requests_list">Friend Requests will appear here</string>
    <string name="press_back_to_exit">Press Back again to exit</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends!</string>
    <string name="request_sent_successfully">Request Sent Successfully</string>
    <string name="failed_to_send_request">Failed to send Friend Request!</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
</resources>